price container fix text color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -166,7 +166,7 @@ fieldset {
                     color: $white;
 
                     span {
-                        color: $grayish-cyan;
+                        color: #CDD9DA;
                     }
 
                     &:nth-child(2) {
@@ -186,7 +186,7 @@ fieldset {
                 text-transform: uppercase;
                 border: none;
                 border-radius: .25rem;
-                color: $very-dark-cyan;
+                color: #002024;
                 padding: .25rem;
                 font-size: 1.25rem;
                 cursor: pointer;
